--- a/client/index.html
+++ b/client/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1" />
     <title>Parag Purandare -Full Stack Developer</title>
     <meta name="description" content="Parag Purandare - Versatile B.Tech student specializing in web development with expertise in MERN stack. AI/software engineer and startup founder crafting innovative SaaS platforms.">
-    <meta property="og:title" content="Parag Purandare - Data Tool Designer & Full Stack Developer">
+    <meta property="og:title" content="Parag Purandare - Full Stack Developer">
     <meta property="og:type" content="website">
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
